tests/snapshots/integration__integration_tests__remove__remove_multiple_nonexistent_force.snap
---
source: tests/integration_tests/remove.rs
info:
  program: wt
  args:
    - remove
    - "-D"
    - foo
    - bar
    - baz
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
❌ [31mNo worktree found for branch [1mfoo[22m[39m
❌ [31mNo worktree found for branch [1mbar[22m[39m
❌ [31mNo worktree found for branch [1mbaz[22m[39m
❌ [31mFailed to remove 3 of 3 specified targets[39m
